Enable CORS for Swagger API testing
